--- a/aboutpage.html
+++ b/aboutpage.html
@@ -163,7 +163,7 @@ Go to our own personal applications page! if you need help finding it you can al
 
   <footer>
     <nav>
-        <a href="AF.html">Go back?</a>
+        <a href="index.html">Go back?</a>
     </nav>
    <p> © copyright its ours</p>
 
@@ -174,3 +174,4 @@ Go to our own personal applications page! if you need help finding it you can al
 
 
 </html>
+
