--- a/applications.html
+++ b/applications.html
@@ -145,7 +145,7 @@ a {
     <div class="footer-text">
         © 2026 its still ours twin
          <nav>
-        <a href="AF.html">Go back?</a>
+        <a href="index.html">Go back?</a>
     </nav>
     </div>
 </div>
@@ -153,3 +153,4 @@ a {
 </body>
 
 </html>
+
