--- a/contact.html
+++ b/contact.html
@@ -126,9 +126,10 @@ a {
 <footer>
     © 2026 Hall of Fame. All Rights Reserved.
  <nav>
-        <a href="AF.html">Go back?</a>
+        <a href="index.html">Go back?</a>
     </nav>
 </footer>
 
 </body>
+
 </html>
