--- a/founders.html
+++ b/founders.html
@@ -139,9 +139,10 @@ a {
 <footer>
     © 2026 Aeather Foundation you ain't getting it
      <nav>
-        <a href="AF.html">Go back?</a>
+        <a href="index.html">Go back?</a>
     </nav>
 </footer>
 
 </body>
 </html>
+
