--- a/founders.html
+++ b/founders.html
@@ -106,28 +106,28 @@ a {
     <div class="founders">
 
         <div class="card">
-    <img src="DSC_5958.jpg" alt="Founder 1" style="width:100%; height:250px; object-fit:cover; border-radius:8px; margin-bottom:20px;">
+    <img src="DSC_5958.JPG" alt="Founder 1" style="width:100%; height:250px; object-fit:cover; border-radius:8px; margin-bottom:20px;">
     <h3>Antonio D. Nixon</h3>
     <h4>Head Designer</h4>
     <p>In charge of the design aspect and overall quality of the project</p>
 </div>
 
        <div class="card">
-    <img src="DSC_5968.jpg" alt="Founder 2" style="width:100%; height:250px; object-fit:cover; border-radius:8px; margin-bottom:20px;">
+    <img src="DSC_5968.JPG" alt="Founder 2" style="width:100%; height:250px; object-fit:cover; border-radius:8px; margin-bottom:20px;">
     <h3>Malek Meriweather</h3>
     <h4>Chief Coder</h4>
     <p>Wrote a majority of the code and made sure it was pristine</p>
 </div>
 
         <div class="card">
-            <img src="DSC_5965.jpg" alt="Founder 3" style="width:100%; height:250px; object-fit:cover; border-radius:8px; margin-bottom:20px;">
+            <img src="DSC_5965.JPG" alt="Founder 3" style="width:100%; height:250px; object-fit:cover; border-radius:8px; margin-bottom:20px;">
             <h3>Kiven Rezk</h3>
             <h4>Project Manager</h4>
             <p>Gave us the vision, and made sure everything was done on time</p>
         </div>
 
         <div class="card">
-           <img src="DSC_5966.jpg" alt="Founder 4" style="width:100%; height:250px; object-fit:cover; border-radius:8px; margin-bottom:20px;">
+           <img src="DSC_5966.JPG" alt="Founder 4" style="width:100%; height:250px; object-fit:cover; border-radius:8px; margin-bottom:20px;">
             <h3>Zachary Willougby</h3>
             <h4>Head Photographer/Management</h4>
             <p>He allowed us to capture the key moments in development, that led us to where we are today</p>
@@ -145,4 +145,5 @@ a {
 
 </body>
 </html>
+
 
